samples/_failures_safe/1761428871_3f8680_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be44c6cb.c: In function ‘main’:
./samples/SAFE/__tmp_be44c6cb.c:189:5: error: expected declaration or statement at end of input
  189 |     if (len == 0) {
      |     ^~
./samples/SAFE/__tmp_be44c6cb.c:189:5: error: expected declaration or statement at end of input
